K8S/platforms-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformapi
  template:
    metadata:
      labels:
        app: platformapi
    spec:
      containers:
        - name: platformapi
          image: betulalbayrak1999/platformapi:latest
---
