K8S/commands-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandsapi
  template:
    metadata:
      labels:
        app: commandsapi
    spec:
      containers:
        - name: commandsapi
          image: betulalbayrak1999/commandsapi:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandsapi
  ports:
  - name: commandsapi
    protocol: TCP
    port: 80
    targetPort: 80
