K8S/platforms-nodeport-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: platformnpapi-srv
spec:
  type: NodePort
  selector:
    app: platformapi
  ports:
    - name: platformapi
      protocol: TCP
      port: 80
      targetPort: 80
